--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -1,12 +1,13 @@
 name: Auto Tag on Version Bump
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Lint and Test Package"]
+    types:
+      - completed
     branches:
       - main
       - master
-    paths:
-      - 'pyproject.toml'
 
 permissions:
   contents: write
@@ -14,6 +15,8 @@ permissions:
 jobs:
   auto-tag:
     runs-on: ubuntu-latest
+    # Only run if the test workflow succeeded
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,3 +48,10 @@ jobs:
           git tag -a "${{ steps.get_version.outputs.version }}" -m "Release ${{ steps.get_version.outputs.version }}"
           git push origin "${{ steps.get_version.outputs.version }}"
           echo "Created and pushed tag ${{ steps.get_version.outputs.version }}"
+
+      - name: Trigger release workflow
+        if: steps.check_tag.outputs.exists == 'false'
+        run: |
+          gh workflow run create-release.yml -f tag=${{ steps.get_version.outputs.version }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
